# LLM-AI-Papers

./: .gitignore  Dockerfile  PRD_paper_agent.md  README.md  classic.csv  committer.py  hist.py  load_balancer.py  main_agent.py  pyproject.toml  reader_agent.py
2025-05/: neural-thermodynamic-laws-for-large-language-model-training.md  parallel-scaling-law-for-language-models.md
2025-09/: cwm-an-open-weights-llm-for-research-on-code-generation-with.md  llm-jepa-large-language-models-meet-joint-embedding-predicti.md
data/: check_arxiv.py  main.py  process_classic.py  process_raw.py
papers/2015-11/: net2net-accelerating-learning-via-knowledge-transfer.md
papers/2016-10/: equality-of-opportunity-in-supervised-learning.md
papers/2017-01/: outrageously-large-neural-networks-the-sparsely-gated-mixtur.md
papers/2017-03/: model-agnostic-meta-learning-for-fast-adaptation-of-deep-net.md
papers/2017-05/: key-value-retrieval-networks-for-task-oriented-dialogue.md
papers/2017-07/: efficient-architecture-search-by-network-transformation.md
papers/2017-08/: towards-an-automatic-turing-test-learning-to-evaluate-dialog.md
papers/2018-01/: low-shot-learning-from-imaginary-data.md
papers/2018-03/: houdini-lifelong-learning-as-program-synthesis.md  on-first-order-meta-learning-algorithms.md
papers/2018-04/: a-call-for-clarity-in-reporting-bleu-scores.md
papers/2018-05/: leveraging-grammar-and-reinforcement-learning-for-neural-pro.md
papers/2018-06/: measuring-semantic-coherence-of-a-conversation.md  path-level-network-transformation-for-efficient-architecture.md
(+1978 files in other folders)
